2008-07-17  Adrian Robert <Adrian.B.Robert@gmail.com>

	* getloadavg.c: Revert last change (2008-07-15).

2008-07-17  Adrian Robert <Adrian.B.Robert@gmail.com>

	* Makefile.in: Replace emacsapp, emacsbindir, emacsappsrc variables
	set here with ns_appdir, ns_appresdir, ns_appbindir, ns_appsrc) set
	from configure.

2008-07-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* s/sol2.h:
	* s/sol2-4.h: Reorganize conditionals.

	* ecrt0.c: Remove code depending on m68000, not used anymore.

	* fns.c (hash_remove): Make static.
	* lisp.h (hash_remove): Don't prototype.

	* m/ibmrs6000.h:
	* m/ibms390x.h:
	* m/macppc.h: Remove boilerplate comments.

	* m/sparc.h (A_TEXT_OFFSET, A_TEXT_SEEK): Remove, only used on
	Solaris, which does not need them.

	* m/vax.h: Remove comments about unsupported systems.

	* s/darwin.h: Reorganize ifdefs.

2008-07-17  Adrian Robert <Adrian.B.Robert@gmail.com>

	* config.in
	* dispextern.h
	* frame.c
	* image.c
	* nsfns.m
	* nsfont.m
	* nsgui.h
	* nsmenu.m
	* nsterm.h
	* nsterm.m
	* s/darwin.h
	* xdisp.c: Change most cases of PENDING to TODO, some to FIXME or
	XXX.

2008-07-17  Andreas Schwab  <schwab@suse.de>

	* s/cygwin.h (LIB_STANDARD_LIBSRC): Don't define.

2008-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use SDATA.  Follow coding convention of placing operators at
	beginning of next line rather than end of previous line, and placing
	spaces around infix operators.

	* Makefile.in: Undef LIB_STANDARD before defining it to silence warning
	in case it was defined already.
	USE @GNUSTEP_MAKEFILES@ rather than envvars.
	* nsterm.m (ns_term_init): Pass Qt and Qnil rather than YES/NO to
	ns_default.
	(applicationShouldTerminate, setValuesFromPanel): Use EQ to compare
	Lisp_Objects.
	* nsterm.h (Fx_display_grayscale_p, Fx_display_planes)
	(ns_defined_color, ns_color_to_lisp): Declare.
	* nsselect.m (ns_handle_selection_request, ns_handle_selection_clear)
	(Fns_own_selection_internal): Make the big ugly hack more explicit, so